Fix button display on mobile

--- a/_assets/sass/components/_search.scss
+++ b/_assets/sass/components/_search.scss
@@ -6,5 +6,8 @@
 
 .c-search {
   @include media('<=990px') {
+    .DocSearch-Button {
+      margin-left: 0;
+    }
   }
 }
